# weather-aqi-cli

./: Cargo.toml
src/: main.rs
src/api/: mod.rs
src/console/: mod.rs
src/models/: mod.rs
