[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = "1.0.204"
serde_derive = "1.0.205"
serde_json = "1.0.122"
tokio = "1.39.2"
